# mirror-switch

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
mirror_switch/: base.py  cli.py  docker.py  mirrors.py  npm.py  pypi.py  utils.py  yarn.py
